Fix overflowing on big numbers

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 .calculator {
   display: flex;
-  max-width: 400px;
+  width: 384px;
   flex-direction: column;
 }
 .buttons {
